fix footer social aside wrapping

--- a/6-taking-it-to-next-level/03-jake-and-elwood/css/style.css
+++ b/6-taking-it-to-next-level/03-jake-and-elwood/css/style.css
@@ -205,6 +205,7 @@ footer {
 .footer-aside-social {
     grid-area: social;
     margin-bottom: 2em;
+    white-space: nowrap;
 }
 
 .footer-section-main {
